--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongodb": "^4.10.0",
     "mongoose": "^6.7.4",
     "nodemailer": "^6.8.0",
+    "typescript": "^4.9.3",
     "uuid": "^9.0.0"
   }
 }
